--- a/src/App.css
+++ b/src/App.css
@@ -39,7 +39,7 @@ nav {
   z-index: -2;
 }
 .home:after {
-  content: 'Foodie';
+  content: 'FoodHub';
   position: absolute;
   bottom: 0;
   left: 20px;
